--- a/src/app/pokemon/Pokemon_listar/Pokemon_listar.component.html
+++ b/src/app/pokemon/Pokemon_listar/Pokemon_listar.component.html
@@ -10,6 +10,7 @@
           class="card-img-top"
           src="{{ pokemon.sprites.front_default }}"
           alt="Imagen del Pokémon {{ pokemon.id }}"
+          (click)="selectPokemon(pokemon)"
         />  
         <div class="card-body">
           <h5 class="card-title">{{ pokemon.name}}</h5>
@@ -17,6 +18,9 @@
       </div>
     </div>
   </div>
+</div>
+<div *ngIf="selected">
+  <app-Pokemon_detalle [pokemonDetail]="selectedPokemon"></app-Pokemon_detalle>
 </div>
 
 
