--- a/src/app/pokemon/Pokemon_detalle/Pokemon_detalle.component.html
+++ b/src/app/pokemon/Pokemon_detalle/Pokemon_detalle.component.html
@@ -3,8 +3,12 @@
   <div class="row">
     <div class="col">
       <dl>
-        <dt>Type</dt>
-        <dd>{{ pokemonDetail.types}}</dd>
+        <dt>Types</dt>
+        <dd>
+          <ul>
+            <li *ngFor="let type of pokemonDetail.types">{{ type.type.name }}</li>
+          </ul>
+        </dd>
         <hr/>
         <dt>Height</dt>
         <dd>{{ pokemonDetail.height }}</dd>
@@ -13,8 +17,11 @@
         <dd>{{ pokemonDetail.weight }}</dd>
         <hr/>
         <dt>Abilities</dt>
-        <dd>{{ pokemonDetail.abilities }}</dd>
-        <hr/>
+        <dd>
+          <ul>
+            <li *ngFor="let ability of pokemonDetail.abilities">{{ ability.ability.name }}</li>
+          </ul>
+        </dd>
       </dl>
     </div>
   </div>
